[package]
name    = "hosts"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

[dependencies]
lalrpop-util = "0.17.2"
regex        = "1.3.4"
serde_yaml   = "0.8.11"
snafu        = "0.6.2"
structopt    = "0.3.9"
serde_with = "1.4.0"

[dependencies.serde]
version  = "1.0.104"
features = ["derive"]

[build-dependencies]
lalrpop = "0.17.2"
