[package]
name    = "hosts"
version = "0.0.0"
authors = ["Casey Rodarmor <casey@rodarmor.com>"]
edition = "2018"

[dependencies]
serde_yaml   = "0.8.11"
snafu        = "0.6.2"
structopt    = "0.3.9"
yaml-rust    = "0.4.3"
serde_with = "1.4.0"

[dependencies.serde]
version  = "1.0.104"
features = ["derive"]
